<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="8dp"
    tools:context=".MainActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/metricsTextInputLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/app_bg"
        android:hint="@string/name"
        android:textColorHint="@color/white">

        <!--this is the actual edit text which takes the input-->
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/metricsEdittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:maxLines="1"
            android:maxLength="16"
            android:textColor="@color/white" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:id="@+id/priceTextInputLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/app_bg"
        android:hint="@string/description"

        android:textColorHint="@color/white">

        <!--this is the actual edit text which takes the input-->
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/priceEditText"
            android:gravity="start"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:inputType="textMultiLine"
            android:maxLength="250"
            android:textColor="@color/white" />

    </com.google.android.material.textfield.TextInputLayout>

   <LinearLayout
       android:paddingStart="8dp"
       android:paddingEnd="8dp"
       android:background="@color/app_bg"
       android:orientation="horizontal"
       android:layout_width="match_parent"
       android:layout_height="wrap_content">

       <androidx.appcompat.widget.AppCompatTextView
           android:layout_weight="1"
           android:layout_gravity="center"
           android:textColor="@color/white"
           android:text="@string/upload_image"
           android:layout_marginEnd="8dp"
           android:layout_width="0dp"
           android:layout_height="wrap_content"/>

       <androidx.appcompat.widget.AppCompatImageView
           android:padding="8dp"
           android:src="@android:drawable/ic_menu_report_image"
           android:layout_width="120dp"
           android:layout_height="120dp"/>
   </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/addUnit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:contentDescription="@string/add_unit"
        android:backgroundTint="@color/white"
        android:layout_marginTop="8dp"
        android:src="@android:drawable/ic_input_add" />

    <com.google.android.material.textview.MaterialTextView
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="Record inserted successfully"/>

</LinearLayout>